--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -10,6 +10,7 @@
 
 .container {
   width: 90%;
+  max-width: 700px;
   margin: 0 auto;
   padding: 5rem 0;
 }
@@ -21,7 +22,6 @@
     line-height: 1.2;
   }
   p {
-    font-size: 1rem;
     text-align: center;
     padding: 2em 0;
   }
