--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -85,6 +85,37 @@
   }
 }
 
+.form__control {
+  position: relative;
+  &.error {
+    input {
+      margin-bottom: 2rem;
+      border: 1px $Red solid;
+    }
+    img {
+      visibility: visible;
+    }
+    small {
+      visibility: visible;
+    }
+  }
+  img {
+    visibility: hidden;
+    position: absolute;
+    top: 10px;
+    right: 30px;
+  }
+  small {
+    visibility: hidden;
+    color: $Red;
+    position: absolute;
+    padding: 1rem 0;
+    top: 30px;
+    right: 0;
+    font-style: italic;
+  }
+}
+
 .shadow {
   box-shadow: 0px 6px rgba($color: #000000, $alpha: 0.1);
 }
