button border fix

--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -49,6 +49,7 @@
     cursor: pointer;
     background: $Green;
     color: white;
+    border: none;
     padding: 1.5em 2em;
     width: 100%;
     border-radius: 5px;
